--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>    
@@ -49,18 +50,84 @@
     <main class="main">
       <div class="row">
         <div class="col-2">
+          <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvas" role="button" aria-controls="offcanvas">
+            <i class="bi bi-chevron-compact-right"></i>
+          </a>          
+          <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvas" aria-labelledby="offcanvasLabel">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasLabel">Offcanvas</h5>              
+            </div>
+            <div class="offcanvas-body">
+              <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvas" role="button" aria-controls="offcanvas">
+                <i class="bi bi-chevron-compact-left"></i>
+              </a>          
+              <div class="offcanvas-body-card">                
+                <ul class="nav flex-column">
+                  <li class="nav-item">
+                    <a class="nav-link border-bottom active" aria-current="page" href="#">
+                      <div class="row">
+                        <div class="col-1">
+                          1
+                        </div>
+                        <div class="col-11">
+                          Description
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link border-bottom" href="#">
+                      <div class="row">
+                        <div class="col-1">
+                          1
+                        </div>
+                        <div class="col-11">
+                          Description
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link border-bottom" href="#">
+                      <div class="row">
+                        <div class="col-1">
+                          1
+                        </div>
+                        <div class="col-11">
+                          Description
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link border-bottom disabled">
+                      <div class="row">
+                        <div class="col-1">
+                          1
+                        </div>
+                        <div class="col-11">
+                          Description
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              
+            </div>
+          </div>
           <ul class="course-list">
             <li>
-              Video 1
+              1
             </li>
             <li>
-              Video 2
+              2
             </li>
             <li>
-              Video 3
+              3
             </li>
             <li>
-              Video 4
+              4
             </li>
           </ul>
         </div>
