--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span><i class="bi bi-menu-button-wide"></i></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">            
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -70,90 +70,171 @@
                   <i class="bi bi-chevron-compact-left"></i>
                 </a>          
                 <div class="offcanvas-body-card">                
-                  <ul class="nav flex-column">
-                    <li class="nav-item">
-                      <a class="nav-link border-bottom active" aria-current="page" href="#">
-                        <div class="row">
-                          <div class="col-1">
-                            1
-                          </div>
-                          <div class="col-11">
-                            Description
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link border-bottom" href="#">
-                        <div class="row">
-                          <div class="col-1">
-                            1
-                          </div>
-                          <div class="col-11">
-                            Description
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link border-bottom" href="#">
-                        <div class="row">
-                          <div class="col-1">
-                            1
-                          </div>
-                          <div class="col-11">
-                            Description
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link border-bottom disabled">
-                        <div class="row">
-                          <div class="col-1">
-                            1
-                          </div>
-                          <div class="col-11">
-                            Description
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                  </ul>
+                  <div class="step">
+                    <div>
+                      <div class="circle"><i class="bi bi-check"></i></div>
+                    </div>
+                    <div>
+                      <div class="title">Primera leccion</div>
+                      <div class="caption">Descripcion</div>
+                    </div>
+                  </div>
+                  <div class="step step-active">
+                    <div>
+                      <div class="circle">2</div>
+                    </div>
+                    <div>
+                      <div class="title">Segunda leccion</div>
+                      <div class="caption">Descripcion</div>
+                    </div>
+                  </div>
+                  <div class="step">
+                    <div>
+                      <div class="circle">3</div>
+                    </div>
+                    <div>
+                      <div class="title">Tercera leccion</div>
+                      <div class="caption">Descripcion</div>
+                    </div>
+                  </div>                                    
+                  <div class="step">
+                    <div>
+                      <div class="circle">4</div>
+                    </div>
+                    <div>
+                      <div class="title">Cuarta leccion</div>
+                      <div class="caption">Descripcion</div>
+                    </div>
+                  </div>  
+                  <div class="step">
+                    <div>
+                      <div class="circle">5</div>
+                    </div>
+                    <div>
+                      <div class="title">Quinta leccion</div>
+                      <div class="caption">Descripcion</div>
+                    </div>
+                  </div>  
+                  <div class="step">
+                    <div>
+                      <div class="circle">6</div>
+                    </div>
+                    <div>
+                      <div class="title">Sexta leccion</div>
+                      <div class="caption">Descripcion</div>
+                    </div>
+                  </div>  
+                  <div class="step">
+                    <div>
+                      <div class="circle">7</div>
+                    </div>
+                    <div>
+                      <div class="title">Septima leccion</div>
+                      <div class="caption">Descripcion</div>
+                    </div>
+                  </div>  
+                  <div class="step">
+                    <div>
+                      <div class="circle">8</div>
+                    </div>
+                    <div>
+                      <div class="title">Octava leccion</div>
+                      <div class="caption">Descripcion</div>
+                    </div>
+                  </div>  
+                  <div class="step">
+                    <div>
+                      <div class="circle">9</div>
+                    </div>
+                    <div>
+                      <div class="title">Final</div>
+                    </div>
+                  </div>                
                 </div>
-                
               </div>
             </div>
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <a class="nav-link border-bottom active" aria-current="page" href="#">
-                  <div class="">
-                    1
-                  </div>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link border-bottom" href="#">
-                  <div class="">
-                    1
-                  </div>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link border-bottom" href="#">
-                  <div class="">
-                    1
-                  </div>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link border-bottom disabled">
-                  <div class="">
-                    1
-                  </div>
-                </a>
-              </li>
-            </ul>
+            <div class="body-stepper">                
+              <div class="step">
+                <div>
+                  <div class="circle"><i class="bi bi-check"></i></div>
+                </div>
+                <div>
+                  <div class="title">&nbsp;</div>
+                  <div class="caption">&nbsp;</div>
+                </div>
+              </div>
+              <div class="step step-active">
+                <div>
+                  <div class="circle">2</div>
+                </div>
+                <div>
+                  <div class="title">&nbsp;</div>
+                  <div class="caption">&nbsp;</div>
+                </div>
+              </div>
+              <div class="step">
+                <div>
+                  <div class="circle">3</div>
+                </div>
+                <div>
+                  <div class="title">&nbsp;</div>
+                  <div class="caption">&nbsp;</div>
+                </div>
+              </div>                                    
+              <div class="step">
+                <div>
+                  <div class="circle">4</div>
+                </div>
+                <div>
+                  <div class="title">&nbsp;</div>
+                  <div class="caption">&nbsp;</div>
+                </div>
+              </div>  
+              <div class="step">
+                <div>
+                  <div class="circle">5</div>
+                </div>
+                <div>
+                  <div class="title">&nbsp;</div>
+                  <div class="caption">&nbsp;</div>
+                </div>
+              </div>  
+              <div class="step">
+                <div>
+                  <div class="circle">6</div>
+                </div>
+                <div>
+                  <div class="title">&nbsp;</div>
+                  <div class="caption">&nbsp;</div>
+                </div>
+              </div>  
+              <div class="step">
+                <div>
+                  <div class="circle">7</div>
+                </div>
+                <div>
+                  <div class="title">&nbsp;</div>
+                  <div class="caption">&nbsp;</div>
+                </div>
+              </div>  
+              <div class="step">
+                <div>
+                  <div class="circle">8</div>
+                </div>
+                <div>
+                  <div class="title">&nbsp;</div>
+                  <div class="caption">&nbsp;</div>
+                </div>
+              </div>  
+              <div class="step">
+                <div>
+                  <div class="circle">9</div>
+                </div>
+                <div>
+                  <div class="title">&nbsp;</div>                  
+                </div>
+              </div>                
+            </div>
           </div>
         </div>  
         <div class="row">  
@@ -246,56 +327,86 @@
                       <div>
                         <div class="marker-list">                        
                           <div class="offcanvas-body-card">                
-                            <ul class="nav flex-column">
-                              <li class="nav-item">
-                                <a class="nav-link border-bottom active" aria-current="page" href="#">
-                                  <div class="row">
-                                    <div class="col-1">
-                                      1
-                                    </div>
-                                    <div class="col-11">
-                                      Description
-                                    </div>
-                                  </div>
-                                </a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link border-bottom" href="#">
-                                  <div class="row">
-                                    <div class="col-1">
-                                      1
-                                    </div>
-                                    <div class="col-11">
-                                      Description
-                                    </div>
-                                  </div>
-                                </a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link border-bottom" href="#">
-                                  <div class="row">
-                                    <div class="col-1">
-                                      1
-                                    </div>
-                                    <div class="col-11">
-                                      Description
-                                    </div>
-                                  </div>
-                                </a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link border-bottom disabled">
-                                  <div class="row">
-                                    <div class="col-1">
-                                      1
-                                    </div>
-                                    <div class="col-11">
-                                      Description
-                                    </div>
-                                  </div>
-                                </a>
-                              </li>
-                            </ul>
+                            <div class="step">
+                              <div>
+                                <div class="circle"><i class="bi bi-check"></i></div>
+                              </div>
+                              <div>
+                                <div class="title">Primera leccion</div>
+                                <div class="caption">Descripcion</div>
+                              </div>
+                            </div>
+                            <div class="step step-active">
+                              <div>
+                                <div class="circle">2</div>
+                              </div>
+                              <div>
+                                <div class="title">Segunda leccion</div>
+                                <div class="caption">Descripcion</div>
+                              </div>
+                            </div>
+                            <div class="step">
+                              <div>
+                                <div class="circle">3</div>
+                              </div>
+                              <div>
+                                <div class="title">Tercera leccion</div>
+                                <div class="caption">Descripcion</div>
+                              </div>
+                            </div>                                    
+                            <div class="step">
+                              <div>
+                                <div class="circle">4</div>
+                              </div>
+                              <div>
+                                <div class="title">Cuarta leccion</div>
+                                <div class="caption">Descripcion</div>
+                              </div>
+                            </div>  
+                            <div class="step">
+                              <div>
+                                <div class="circle">5</div>
+                              </div>
+                              <div>
+                                <div class="title">Quinta leccion</div>
+                                <div class="caption">Descripcion</div>
+                              </div>
+                            </div>  
+                            <div class="step">
+                              <div>
+                                <div class="circle">6</div>
+                              </div>
+                              <div>
+                                <div class="title">Sexta leccion</div>
+                                <div class="caption">Descripcion</div>
+                              </div>
+                            </div>  
+                            <div class="step">
+                              <div>
+                                <div class="circle">7</div>
+                              </div>
+                              <div>
+                                <div class="title">Septima leccion</div>
+                                <div class="caption">Descripcion</div>
+                              </div>
+                            </div>  
+                            <div class="step">
+                              <div>
+                                <div class="circle">8</div>
+                              </div>
+                              <div>
+                                <div class="title">Octava leccion</div>
+                                <div class="caption">Descripcion</div>
+                              </div>
+                            </div>  
+                            <div class="step">
+                              <div>
+                                <div class="circle">9</div>
+                              </div>
+                              <div>
+                                <div class="title">Final</div>
+                              </div>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -515,7 +626,13 @@
                   </li>              
                 </ul>
                 <div class="tab-content" id="myTabContent">
-                  <div class="tab-pane fade show active" id="chat-tab-pane" role="tabpanel" aria-labelledby="chat-tab" tabindex="0">
+                  <div class="tab-pane fade show active" id="chat-tab-pane" role="tabpanel" aria-labelledby="chat-tab" tabindex="0">                    
+                    <div class="d-flex p-3">
+                      <div class="small">Ordenar por:</div>&nbsp;&nbsp;&nbsp;
+                      <span class="badge rounded-pill active">Más votados</span>
+                      <span class="badge rounded-pill">Nuevos</span>
+                      <span class="badge rounded-pill">Sin responder</span>
+                    </div>                    
                     <div class="chat-box">
                       <div class="chat-box-item">
                         <div class="d-flex user-header">
@@ -591,7 +708,13 @@
                       </div>
                     </div>
                   </div>
-                  <div class="tab-pane fade" id="chats-tab-pane" role="tabpanel" aria-labelledby="chats-tab" tabindex="1">
+                  <div class="tab-pane fade" id="chats-tab-pane" role="tabpanel" aria-labelledby="chats-tab" tabindex="1">                    
+                    <div class="d-flex p-3">
+                      <div class="small">Ordenar por:</div>&nbsp;&nbsp;&nbsp;
+                      <span class="badge rounded-pill">Más votados</span>
+                      <span class="badge rounded-pill active">Nuevos</span>
+                      <span class="badge rounded-pill">Sin responder</span>
+                    </div>
                     <div class="chat-box">
                       <div class="chat-box-item">
                         <div class="d-flex user-header">
