--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                   <div>
                     <div class="circle"><i class="bi bi-check"></i></div>
                   </div>
-                  <div>
+                  <div class="step-text">
                     <div class="title">&nbsp;</div>
                     <div class="caption">&nbsp;</div>
                   </div>
