--- a/index.html
+++ b/index.html
@@ -502,6 +502,12 @@
                     <li class="nav-item" role="presentation">
                       <button class="nav-link" id="mchats-tab" data-bs-toggle="tab" data-bs-target="#mchats-tab-pane" type="button" role="tab" aria-controls="mchats-tab-pane" aria-selected="false">Preguntas</button>
                     </li>
+                    <li class="nav-item" role="presentation">
+                      <button class="nav-link" id="mres1-tab" data-bs-toggle="tab" data-bs-target="#mres1-tab-pane" type="button" role="tab" aria-controls="mres1-tab-pane" aria-selected="true">Tab1</button>
+                    </li>                
+                    <li class="nav-item" role="presentation">
+                      <button class="nav-link" id="mres2-tab" data-bs-toggle="tab" data-bs-target="#mres2-tab-pane" type="button" role="tab" aria-controls="mres2-tab-pane" aria-selected="true">Tab2</button>
+                    </li>                
                   </ul>
                   <div class="tab-content" id="myTabContentRes">
                     <div class="tab-pane fade show active" id="mcursos-tab-pane" role="tabpanel" aria-labelledby="mcursos-tab" tabindex="0">
@@ -858,6 +864,8 @@
                         </div>
                       </div>
                     </div>
+                    <div class="tab-pane fade" id="mres1-tab-pane" role="tabpanel" aria-labelledby="mres1-tab" tabindex="4">...</div>                
+                    <div class="tab-pane fade" id="mres2-tab-pane" role="tabpanel" aria-labelledby="mres2-tab" tabindex="5">.....</div>
                   </div>
                 </div>
                 <!--end mobile tabs-->
