--- a/index.html
+++ b/index.html
@@ -486,8 +486,8 @@
                         </div>                  
                       </div>                    
                     </div>
-                    <div class="tab-pane fade" id="res1-tab-pane" role="tabpanel" aria-labelledby="res1-tab" tabindex="1">...</div>                
-                    <div class="tab-pane fade" id="res2-tab-pane" role="tabpanel" aria-labelledby="res2-tab" tabindex="2">.....</div>
+                    <div class="tab-pane fade" id="res1-tab-pane" role="tabpanel" aria-labelledby="res1-tab" tabindex="1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, obcaecati! Impedit praesentium optio repellat incidunt voluptatum soluta perferendis blanditiis fugiat, accusantium dignissimos asperiores, tempore, assumenda voluptates ad quam amet minima?</div>                
+                    <div class="tab-pane fade" id="res2-tab-pane" role="tabpanel" aria-labelledby="res2-tab" tabindex="2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat pariatur reprehenderit enim mollitia animi labore itaque velit, sapiente vel, illum accusantium, laborum beatae minima porro fuga tenetur. Unde, temporibus officia.</div>
                   </div>
                 </div>
                 <!--mobile tabs-->
@@ -867,8 +867,8 @@
                         </div>
                       </div>
                     </div>
-                    <div class="tab-pane fade" id="mres1-tab-pane" role="tabpanel" aria-labelledby="mres1-tab" tabindex="4">...</div>                
-                    <div class="tab-pane fade" id="mres2-tab-pane" role="tabpanel" aria-labelledby="mres2-tab" tabindex="5">.....</div>
+                    <div class="tab-pane fade" id="mres1-tab-pane" role="tabpanel" aria-labelledby="mres1-tab" tabindex="4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod tempore assumenda dolor vero obcaecati, molestiae odit quisquam veniam nostrum. Sunt omnis eaque fugiat aperiam, reprehenderit amet voluptatum ipsam error soluta!</div>                
+                    <div class="tab-pane fade" id="mres2-tab-pane" role="tabpanel" aria-labelledby="mres2-tab" tabindex="5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, dolorem architecto harum, adipisci magnam nam odio velit quisquam perspiciatis accusamus esse dolor itaque! Velit hic maiores nesciunt quis animi aliquam!</div>
                   </div>
                 </div>
                 <!--end mobile tabs-->
