--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </nav>
     </header>
     <main class="main">
-      <!--marker list-->
+      <!--STEPPER: Seccion izquierda-->
       <div class="d-flex">
         <div class="marker-main">
           <div id="markerList" class="marker-list">
@@ -95,6 +95,7 @@
               <div class="offcanvas-header">
                 <h5 class="offcanvas-title" id="offcanvasLabel">Offcanvas</h5>              
               </div>
+              <!--STEPPER: Navegacion desplegable-->
               <div id="canvas-stepper" class="offcanvas-body">
                 <a id="closeButton" class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvas" role="button" aria-controls="offcanvas">
                   <i class="bi bi-chevron-compact-left"></i>
@@ -255,6 +256,7 @@
                 </div>
               </div>
             </div>
+            <!--STEPPER: Seccion siempre visible-->
             <div class="body-stepper">                              
               <div id="stepper" class="stepper">
                 <div class="step">
@@ -413,9 +415,9 @@
             </div>
           </div>
         </div>  
-        <div class="row">  
-          <!--videos-->
+        <div class="row">            
           <div class="col-12 col-xxl-8 col-xl-8 col-lg-8 col-md-8 col-sm-12">
+            <!--CENTRAL VIDEO: Contenedor general de toda la seccion central-->
             <div class="video-main">
               <div class="video-wrapper">
                 <div class="video-container">
@@ -490,7 +492,7 @@
                     <div class="tab-pane fade" id="res2-tab-pane" role="tabpanel" aria-labelledby="res2-tab" tabindex="2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat pariatur reprehenderit enim mollitia animi labore itaque velit, sapiente vel, illum accusantium, laborum beatae minima porro fuga tenetur. Unde, temporibus officia.</div>
                   </div>
                 </div>
-                <!--mobile tabs-->
+                <!--MOBILE: Seccion central que se muestra sólo en modo móvil-->
                 <div class="tabs-main">
                   <ul class="nav nav-tabs" id="myTabRes" role="tablist">
                     <li class="nav-item" role="presentation">
@@ -871,11 +873,12 @@
                     <div class="tab-pane fade" id="mres2-tab-pane" role="tabpanel" aria-labelledby="mres2-tab" tabindex="5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, dolorem architecto harum, adipisci magnam nam odio velit quisquam perspiciatis accusamus esse dolor itaque! Velit hic maiores nesciunt quis animi aliquam!</div>
                   </div>
                 </div>
-                <!--end mobile tabs-->
+                <!--end MOBILE-->
               </div>
             </div>
           </div>
           <div class="col-12 col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12">
+            <!--CHAT: Sección derecha que contienen las conversaciones y preguntas-->
             <div class="chat-main">
               <div class="input-container">
                 <input class="input" type="text" placeholder="Escribe tu aporte o pregunta"/>
@@ -1114,6 +1117,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>    
     
     <script>
+      /*Script que cambia el estado del stepper al hacerle click en alguno de sus elementos*/
+      /*Script para la barra fija izquierda*/
       const lista = document.getElementById("stepper");
       const elementos = lista.querySelectorAll(".step");
       const iframe = document.getElementById("videoFrame");
@@ -1135,6 +1140,8 @@
     </script>
 
   <script>
+    /*Script que cambia el estado del stepper al hacerle click en alguno de sus elementos*/
+    /*Script para la barra flotante o SIDEBAR*/
     const lista1 = document.getElementById("side-stepper");
     const elementos1 = lista1.querySelectorAll(".step");
     const iframe1 = document.getElementById("videoFrame");
@@ -1157,6 +1164,7 @@
 
 
     <script>
+      /*Script para el STEPPER*/      
       document.addEventListener("click", function(event) {
         var elemento = document.getElementById("stepper");
         var segundoElemento = document.getElementById("offcanvas");                
