--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">            
             <div class="w-100">              
               <div class="d-flex justify-content-between">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav menu-explore">
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Explorar
@@ -38,12 +38,14 @@
                     </ul>
                   </li>
                 </ul>
-                <form class="d-flex" role="search">
-                  <div class="input-group">
-                    <span class="input-group-text"><i class="bi bi-search"></i></span>
-                    <input type="search" aria-label="Search" class="form-control me-2" placeholder="¿Que deseas aprender?">  
-                  </div>
-                </form>
+                <div class="search">
+                  <form class="d-flex" role="search">
+                    <div class="input-group">
+                      <span class="input-group-text"><i class="bi bi-search"></i></span>
+                      <input type="search" aria-label="Search" class="form-control me-2" placeholder="¿Que deseas aprender?">  
+                    </div>
+                  </form>
+                </div>                
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-end">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Cursos</a>
